Bug 1798246 - Reduce ScratchTagScope in function loadAtomOrSymbolAndHash. r=dthayer,jandem

This is a workaround for scratch register usage conflict issue on loongarch64.

Differential Revision: https://phabricator.services.mozilla.com/D160745